iptables
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Jan 22 15:57:31 2026
*raw
:PREROUTING ACCEPT [1416134:4137145339]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-0b34753ed396 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 42809 -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-0b34753ed396 -j DROP
COMMIT
# Completed on Thu Jan 22 15:57:31 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Jan 22 15:57:31 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.2/32 ! -i br-0b34753ed396 -o br-0b34753ed396 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-0b34753ed396 -o br-0b34753ed396 -p tcp -m tcp --dport 6443 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-0b34753ed396 -o br-0b34753ed396 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-0b34753ed396 -o br-0b34753ed396 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER ! -i br-0b34753ed396 -o br-0b34753ed396 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-0b34753ed396 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-0b34753ed396 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-0b34753ed396 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
COMMIT
# Completed on Thu Jan 22 15:57:31 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Jan 22 15:57:31 2026
*nat
:PREROUTING ACCEPT [3021:722092]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [12821:2283532]
:POSTROUTING ACCEPT [12830:2284128]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-0b34753ed396 -j MASQUERADE
-A DOCKER ! -i br-0b34753ed396 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.18.0.2:80
-A DOCKER ! -i br-0b34753ed396 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.18.0.2:443
-A DOCKER -d 127.0.0.1/32 ! -i br-0b34753ed396 -p tcp -m tcp --dport 42809 -j DNAT --to-destination 172.18.0.2:6443
-A DOCKER ! -i br-0b34753ed396 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.18.0.2:8080
COMMIT
# Completed on Thu Jan 22 15:57:31 2026
